app_server: fix misuse of BReferenceable.

Fixes #9989.