src/servers/app/drawing/BitmapDrawingEngine.cpp
@@ -56,8 +56,7 @@ BitmapDrawingEngine::SetSize(int32 newWidth, int32 newHeight)
 		fHWInterface = NULL;
 	}
 
-	delete fBitmap;
-	fBitmap = NULL;
+	fBitmap.Unset();
 
 	if (newWidth <= 0 || newHeight <= 0)
 		return B_OK;
